# image-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/image_mcp/: access.py  generate.py  metadata.py  models.py  prefs.py  server.py  spend.py  storage.py  ui.py  usage.py
tests/: test_access.py  test_metadata.py  test_models.py  test_prefs.py  test_spend.py  test_storage.py  test_usage.py
